# Book_Classifier

./: .gitignore  README.md  categories.toml  classify_docs.py  old_version.py  pyproject.toml
data/: categories.toml
